--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build:css": "sass --watch 'src/styles/**/*.scss:src/styles/main.css' --style expanded --no-source-map",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
